<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/imageNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="56dp"
            android:text="@string/save_image_fragment_name_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/imageNameField"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:hint="@string/save_image_fragment_name_field"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/imageNameLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="40dp"
            android:width="200dp"
            android:text="@string/save_image_fragment_save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageNameField" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>