<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lab1.Lab1Activity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="91dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/lab1_name_label"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/nameInput"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:layout_marginTop="93dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/lab1_name_hint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/surnameLabel"
                android:layout_width="91dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:text="@string/lab1_surname_label"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/surnameInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

            <EditText
                android:id="@+id/surnameInput"
                android:layout_width="281dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/lab1_surnname_hint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/surnameLabel"
                app:layout_constraintTop_toBottomOf="@+id/nameInput" />

            <TextView
                android:id="@+id/gradesLabel"
                android:layout_width="91dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:text="@string/lab1_grade_label"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/gradesInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surnameLabel" />

            <EditText
                android:id="@+id/gradesInput"
                android:layout_width="281dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/lab1_grade_hint"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gradesLabel"
                app:layout_constraintTop_toBottomOf="@+id/surnameInput" />

            <Button
                android:id="@+id/gradesButton"
                android:layout_width="371dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:text="@string/lab1_grade_button"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gradesInput" />

            <TextView
                android:id="@+id/meanGrade"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="Twoja średnia: 2.0"
                android:textAlignment="center"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gradesButton" />

            <Button
                android:id="@+id/returnToMenu"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="Super"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meanGrade" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>