<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lab4.Lab4Activity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar_lab4"
                layout="@layout/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/websiteUrlLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="58dp"
                android:text="@string/lab4_website_url_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_lab4" />

            <EditText
                android:id="@+id/websiteUrlField"
                android:layout_width="291dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/lab4_website_url_field"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/websiteUrlLabel"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_lab4" />

            <Button
                android:id="@+id/downloadInfoButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/lab4_download_info_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/websiteUrlField" />

            <TextView
                android:id="@+id/fileSizeLabel"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:text="@string/lab4_file_size_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/downloadInfoButton" />

            <TextView
                android:id="@+id/fileSizeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="40dp"
                android:text="0"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/fileSizeLabel"
                app:layout_constraintTop_toBottomOf="@+id/downloadInfoButton" />

            <TextView
                android:id="@+id/fileTypeLabel"
                android:layout_width="140dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="15dp"
                android:text="@string/lab4_file_type_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fileSizeLabel" />

            <TextView
                android:id="@+id/fileTypeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="15dp"
                android:text="0"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/fileTypeLabel"
                app:layout_constraintTop_toBottomOf="@+id/fileSizeValue" />

            <Button
                android:id="@+id/downloadFileButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/lab4_download_file_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fileTypeLabel" />

            <TextView
                android:id="@+id/bytesLabel"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:text="@string/lab4_bytes_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/downloadFileButton" />

            <TextView
                android:id="@+id/bytesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="40dp"
                android:text="0"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/bytesLabel"
                app:layout_constraintTop_toBottomOf="@+id/downloadFileButton" />

            <ProgressBar
                android:id="@+id/downloadProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bytesLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>